# sealman-os-conman

./: .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
device/: eg_aziot_clean_keys.sh  eg_reboot.sh  factory_reset.sh  proxy.sh  read_admin_keys.sh  smartems_default_config.cfg  tmout.sh
message_router/: Doxyfile  Makefile  client_list.cpp  client_list.h  helpers.cpp  helpers.h  main.cpp  manager.cpp  manager.h  proxy.cpp  proxy.h  remover.cpp  remover.h  shared_state.cpp  shared_state.h  socket_closer.cpp  socket_closer.h
message_router/config/: command_line.cpp  command_line.h  common_options.h  data.cpp  data.h
message_router/utils/: locks.cpp  locks.h  message_buffer.cpp  message_buffer.h  multipart_message_buffer.h  string_storage.cpp  string_storage.h  watchdog.cpp  watchdog.h
src/mpa/common/: cli.py  common.py  killer_thread.py  logger.py
src/mpa/communication/: affirmable_preset_actions.py  argparse.py  client.py  common.py  daemon_transaction.py  inter_process_lock.py  message_parser.py  preset.py  preset_cli.py  process.py  status_codes.py  topics.py
src/mpa/config/: common.py  configfiles.py
src/mpa/device/: azure.py  common.py  date_time.py  device.py  device_config.py  eeprom.py  firmware.py  mgmtd_device.py  mgmtd_kernel.py  mgmtd_shadow.py  mgmtd_ssh.py  smartems.py  socket_daemon.py  timer.py  tpm.py
src/mpa/docker/: docker_config.py  mgmtd_compose.py  mgmtd_docker.py
src/mpa/example/: cli.py
src/mpa/firewall/: fw.py  mgmtd_firewall.py
src/mpa/health_monitor/: health_monitor.py
src/mpa/logs/: mgmtd_logstreamer.py
src/mpa/network/: cellular_check.py  common.py  dhcp_server.py  ipv4_address_range.py  kea_control_socket_client.py  management.py  mgmtd_network.py  nm.py  routing.py  routing_common.py  wifi_client.py  wifi_common.py
src/mpa/ovpn/: common.py  mgmtd_ovpn.py  ovpn.py
src/mpa/parser/: licence_parser.py  openvpn_parser.py
src/mpa/scripts/: generate_completion.py
src/mpa/subnets/: mgmtd_subnets.py
src/mpa/swupdate/: mgmtd_swupdate.py  swupdate_client.py  swupdate_consts.py  swupdate_types.py
src/mpa/webgui/: mgmtd_webgui.py
tests/device/: __init__.py  disable_sems_update.py  test_azure.py  test_confctlparser.py  test_ssh.py
tests/device/data/: config_sysctl.conf  config_sysctl_with_comments.conf  default_update_config  iotedge_config_set_config_input  iotedge_config_set_config_result
tests/network/: test_dhcp_server.py  test_ipv4_address_range.py
tests/webgui/: test_mgmtd_webgui.py
tests/webgui/data/: example_nginx_configuration.conf
tools/image/: print_from_efi.sh  store_info_in_uefi.sh
